# Scholarship-Agent

./: .gitignore  Dockerfile  README.md  __init__ (3).py  __init__.py  additional_scholarship_scrapers.py  base_scraper.py  chevening_scraper.py  commonwealth_scraper.py  daad_scraper.py  data_processor.py  db_manager.py  docker-compose.yml  env.example  erasmus_scraper.py  excel_exporter.py  flask_app.py  fulbright_scraper.py  generic_scraper.py  hybrid_scraper.py  matcher.py  orchestrator.py  pyproject.toml  pythonanywhere_wsgi.py  recommendation_engine.py  requirements.txt  run.bat  scraper_factory.py  sources.py
ai_engine/: orchestrator.py  recommendation_engine.py
config/: settings.py  sources.py
scrapers/: base_scraper.py  daad_scraper.py  erasmus_scraper.py  fulbright_scraper.py  generic_scraper.py  hec_scraper.py  hybrid_scraper.py  specialized_hybrids.py
templates/: index.html
utils/: anti_block.py  db_manager.py  excel_exporter.py  validators.py
